# ibus-hangul

./: .gitignore  Makefile.am  NEWS  README  autogen.sh  configure.ac  ibus-hangul.spec.in
data/: Makefile.am  org.freedesktop.ibus.engine.hangul.gschema.xml  org.freedesktop.ibus.engine.hangul.metainfo.xml.in
icons/: Makefile.am
m4/: Makefile.am
po/: Makevars  POTFILES.in  POTFILES.skip  ko.po  zh_CN.po
setup/: Makefile.am  config.py.in  ibus-setup-hangul.desktop.in  ibus-setup-hangul.in  keycapturedialog.py  main.py  setup.ui
src/: Makefile.am  engine.c  hangul.xml.in.in  main.c  test-ustring.c  ustring.c  ustring.h
tests/: Makefile.am  ibus-hangul.c
